added the admin portal and some useful functionalities

--- a/data_collection_site/portal/templates/portal/assigned_form_page.html
+++ b/data_collection_site/portal/templates/portal/assigned_form_page.html
@@ -10,6 +10,11 @@
 </head>
 <body>
 <div class="container mt-4">
+    <div class="row mb-3">
+        <div class="col text-end">
+            <a href="{% url 'dashboard' %}" class="btn btn-secondary">Back to Dashboard</a>
+        </div>
+    </div>
     <h2>Form {{ form_id }}</h2>
     <div class="row">
         <div class="col-md-7">
