--- a/data_collection_site/portal/templates/portal/assigned_form_page.html
+++ b/data_collection_site/portal/templates/portal/assigned_form_page.html
@@ -19,8 +19,10 @@
     <div class="row">
         <div class="col-md-7">
             <h5>PDF Preview</h5>
-
-            <iframe class="pdf-viewer" src="{{ pdf_url }}"></iframe>
+            <!-- <object class="pdf-viewer" data="{{ pdf_url }}" type="application/pdf" width="100%" height="100%"></object> -->
+            <iframe class="pdf-viewer" src="https://ilocr.iiit.ac.in{{pdf_url}}"></iframe>
+            <!-- <iframe class="pdf-viewer" src="https://ilocr.iiit.ac.in/dataset/static/assets/img/publication/printed/ID_20.pdf"></iframe> -->
+             
 
         </div>
         <div class="col-md-5">
@@ -63,6 +65,7 @@
                 </ul>
             </nav>
             <a href="{% url 'download_all_assigned' %}" class="btn btn-outline-success mt-2">Download All Assigned Entries</a>
+            <a href="{% url 'assigned_forms_list' %}" class="btn btn-info mt-2 ms-2">View All Assigned Forms</a>
         </div>
     </div>
 </div>
