--- a/data_collection_site/portal/templates/portal/dashboard.html
+++ b/data_collection_site/portal/templates/portal/dashboard.html
@@ -12,14 +12,26 @@
                 <h2 class="mb-4 text-center">Welcome, {{ name }}!</h2>
                 <p class="text-center">Your unique ID: <b>{{ unique_id }}</b></p>
                 <p>You have completed <b>{{ num_forms_done }}</b> forms.</p>
-                {% if form_ids %}
-                    <p>Your assigned forms:</p>
-                    <ul>
-                        {% for fid in form_ids %}
-                            <li>{{ fid }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+                <h4>Your Assigned Forms</h4>
+                <div class="row">
+                    {% for form in form_infos %}
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <div class="card-header">
+                                Form ID: {{ form.form_id }}
+                            </div>
+                            <div class="card-body">
+                                <iframe src="{{ form.pdf_url }}" width="100%" height="300px"></iframe>
+                                <!-- <div class="mt-2">
+                                    <a href="{% url 'download_single_entry' form.form_id %}" class="btn btn-primary btn-sm">Download this entry</a>
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+                    {% empty %}
+                    <p>No forms assigned yet.</p>
+                    {% endfor %}
+                </div>
                 <form method="post" class="mt-4">
                     {% csrf_token %}
                     <div class="mb-3">
@@ -33,7 +45,7 @@
                     <button type="submit" class="btn btn-primary w-100">Get Forms</button>
                 </form>
                 <div class="text-center mt-4">
-                    <a href="{% url 'assigned_form_page' page_num=1 %}" class="btn btn-info mb-2">View Assigned Forms</a>
+                    <a href="{% url 'assigned_forms_list' %}" class="btn btn-info mb-2">View Assigned Forms</a>
                     <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
                 </div>
             </div>
